statistics is added